finished desktop site within requirements

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,7 +3,9 @@
 .home {
 
   .intro {
-
+    img{
+      .rounded-box;
+    }
     h2 {
       padding: 15px;
     }
@@ -58,6 +60,8 @@
       }
 
       .btn {
+        .rounded-box;
+        .button;
       }
     }
 
