--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,14 @@
 // Mixins Here
+.rounded-box {
+    border-radius:5px;
+}
+
+.button{
+    color: white;
+    background-color: @btn-bg-color;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    width: 100px;
+    text-align: center;
+    font-size: 18px;
+}
