--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,15 @@
+.rounded-box {
+  border-radius: 5px;
+}
+.button {
+  color: white;
+  background-color: #22283A;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  width: 100px;
+  text-align: center;
+  font-size: 18px;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -160,6 +172,26 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.top-nav {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.top-nav h1 {
+  font-size: 3.7em;
+  margin-top: 10px;
+}
+.top-nav nav {
+  padding-top: 14px;
+  padding-bottom: 16px;
+}
+.top-nav nav a {
+  text-decoration: none;
+  color: black;
+  font-size: 17px;
+  margin: 7px;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -169,6 +201,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro img {
+  border-radius: 5px;
 }
 .home .intro h2 {
   padding: 15px;
@@ -211,6 +246,16 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  border-radius: 5px;
+  color: white;
+  background-color: #22283A;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  width: 100px;
+  text-align: center;
+  font-size: 18px;
 }
 .home .walk .walk-img {
   width: 46%;
