--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,22 @@
 // Navigation code here
+.top-nav {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    h1 {
+        font-size: 3.7em;
+        margin-top: 10px;
+    }
+    nav{
+        padding-top: 14px;
+        padding-bottom: 16px;
+        a {
+            text-decoration: none;
+            color: black;
+            font-size: 17px;
+            margin: 7px; 
+        }
+    }
+    
+}
