--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,9 +1,7 @@
 // Navigation code here
 .top-nav {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    .center-text-column;
     h1 {
         font-size: 3.7em;
         margin-top: 10px;
