--- a/css/index.css
+++ b/css/index.css
@@ -169,10 +169,18 @@ p {
   margin: 0 auto;
 }
 .top-nav {
-  width: 100%;
+  background-color: #f4f4f4;
+  width: 76%;
+  margin-left: 12%;
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+@media (max-width: 500px) {
+  .top-nav {
+    width: 100%;
+    margin-left: 0px;
+  }
 }
 .top-nav h1 {
   font-size: 3.7em;
@@ -201,16 +209,53 @@ footer {
 .home .intro img {
   border-radius: 5px;
 }
+@media (max-width: 500px) {
+  .home .intro img {
+    width: 500px;
+    height: 125px;
+  }
+}
 .home .intro h2 {
   padding: 15px;
 }
+@media (max-width: 500px) {
+  .home .intro h2 {
+    padding: 15px 20px 15px 20px;
+  }
+}
 .home .intro p {
   padding: 0 15px;
+}
+@media (max-width: 500px) {
+  .home .intro p {
+    padding: 0 24px 0 18px;
+  }
 }
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .launch {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    width: 87%;
+  }
 }
 .home .space-images img {
   width: 28%;
@@ -224,8 +269,19 @@ footer {
 .home .visit-planets h3 {
   margin-top: 11px;
 }
+@media (max-width: 500px) {
+  .home .visit-planets h3 {
+    padding: 15px 20px 15px 10px;
+    margin-top: 0px;
+  }
+}
 .home .visit-planets p {
   margin-top: 13px;
+}
+@media (max-width: 500px) {
+  .home .visit-planets p {
+    padding: 0 10px 0 10px;
+  }
 }
 .home .walk {
   margin-top: 60px;
@@ -234,8 +290,22 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 3% 6.5% 0 6.5%;
+    margin-top: 20px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -253,13 +323,50 @@ footer {
   background-color: #22283A;
   text-align: center;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 4% 6.5% 4% 6.5%;
+    margin-bottom: 15px;
+  }
+}
 .home .walk .walk-text .btn:hover {
   background-color: white;
   color: #22283A;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    width: 100px;
+    font-size: 18px;
+    color: white;
+    background-color: #22283A;
+    text-align: center;
+  }
+  .home .walk .walk-text .btn:hover {
+    background-color: white;
+    color: #22283A;
+  }
+}
+@media (max-width: 500px) and (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 4% 6.5% 4% 6.5%;
+    margin-bottom: 15px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    margin-left: 0%;
+    margin-bottom: 3%;
+    width: 100%;
+    order: -1;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
