--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,14 +4,24 @@
 
   .intro {
     img{
-      .rounded-box;
+      @media @phone {
+        width: 500px;
+        height: 125px;
+      };
+      .rounded-box();
     }
     h2 {
       padding: 15px;
+      @media @phone {
+        padding: 15px 20px 15px 20px;
+      };
     }
 
     p {
       padding:0 15px;
+      @media @phone {
+        padding: 0 24px 0 18px;
+      };
     }
   
   }
@@ -20,6 +30,25 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    @media @phone {
+      display: flex;
+      justify-content: center;
+    };
+    .sky {
+      @media @phone {
+        display: none;
+      };
+    }
+    .launch {
+      @media @phone {
+        display: none;
+      };
+    }
+    .blast {
+      @media @phone {
+        width: 87%;
+      };
+    }
 
     img {
       width: 28%;
@@ -33,11 +62,18 @@
     padding: 15px;
 
     h3 {
+      @media @phone {
+        padding: 15px 20px 15px 10px;
+        margin-top: 0px;
+      };
       margin-top: 11px;
     }
 
     p {
       margin-top: 13px;
+      @media @phone {
+        padding: 0 10px 0 10px;
+      };
     }
   }
 
@@ -47,9 +83,19 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      padding: 3% 6.5% 0 6.5%;
+      margin-top: 20px;
+    };
 
     .walk-text {
       width: 50%;
+      @media @phone {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -60,15 +106,24 @@
       }
 
       .btn {
-        .rounded-box;
+        .rounded-box();
         .button(white, @btn-bg-color, center);
+        @media @phone {
+          .button(white, @btn-bg-color, center)
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+      @media @phone {
+        margin-left: 0%;
+        margin-bottom: 3%;
+        width: 100%;
+        order: -1;
+      }
+    
       img {
         width: 100%;
         height: auto;
