--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,13 @@
 // Navigation code here
 .top-nav {
-    width: 100%;
-    .center-text-column;
+    background-color: #f4f4f4;
+    width: 76%;
+    margin-left: 12%;
+    .center-text-column();
+    @media @phone {
+        width: 100%;
+        margin-left: 0px;
+    };
     h1 {
         font-size: 3.7em;
         margin-top: 10px;
