--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,7 +3,7 @@
 .home {
 
   .intro {
-    img{
+    img {
       @media @phone {
         width: 500px;
         height: 125px;
@@ -34,12 +34,7 @@
       display: flex;
       justify-content: center;
     };
-    .sky {
-      @media @phone {
-        display: none;
-      };
-    }
-    .launch {
+    .sky, .launch {
       @media @phone {
         display: none;
       };
